fixed dropdown ui overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -69,6 +69,7 @@ button {
     background: var(--secondary);
     color: var(--primary);
     margin-bottom: 10px;
+    border-radius: 30px;
 }
 
 .dropdownmenu > * {
